<resources>
    <string name="app_name">FlyingSaucer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="leftControl">Left</string>
    <string name="thrustControl">Thrust</string>
    <string name="shotControl">Shot</string>
    <string name="menuControl">Menu</string>
    <string name="rightControl">right</string>
    <string name="gameName">Best Asteroids Ever</string>
    <string name="changeSkin">Change Skin</string>
    <string name="highScore">High Score</string>
    <string name="about">About</string>
    <string name="play">Play</string>
</resources>
